# llm-structured-output

./: .gitignore  LICENSE  README.md  __init__.py  acceptor.py  json_acceptor.py  json_schema_acceptor.py  pyproject.toml
examples/: llm_schema.py  requirements.txt  server.py
src/examples/: attention.py  json_schema_cli.py  llm_schema.py  reluctance.py  requirements.txt  reusable_kv_cache.py  server.py
src/examples/static/: attention.html  ui.html
src/llm_structured_output/: __init__.py  acceptor.py  json_acceptor.py  json_schema_acceptor.py
src/llm_structured_output/util/: __init__.py  tokenization.py  tokentrie.py
src/tests/: eval.py  eval_api.py  eval_local.py  eval_report.py  requirements.txt
src/tests/data/fireworks-ai_function-calling-eval-dataset-v0/: completions-multi_turn-Meta-Llama-3-8B-Instruct-4bit.jsonl  completions-multi_turn-OpenAI-gpt-4o-2024-05-13.jsonl  completions-single_turn-Meta-Llama-3-8B-Instruct-4bit.jsonl  completions-single_turn-OpenAI-gpt-4o-2024-05-13.jsonl  multi_turn-00000-of-00001.jsonl  multi_turn-00000-of-00001.parquet  parquet_to_jsonl.py  report-multi_turn.md  report-single_turn.md  single_turn-00000-of-00001.jsonl  single_turn-00000-of-00001.parquet
tests/: eval.py  requirements.txt
util/: bitmap_utils.py  output.py  tokentrie.py
